--- a/main.css
+++ b/main.css
@@ -18,6 +18,8 @@ header{
     padding: 3% 20px;
     font-size: 20px;
     color: white;
+    width: 50%;
+    transition: .3s linear;
 }
 .search::placeholder{
     color: rgb(51, 53, 48);
@@ -26,6 +28,8 @@ header{
 .search:focus{
     background-color: rgb(158, 161, 138);
     outline: none;
+    width: 100%;
+    
 }
 main {
     display: flex;
