feat: add footer

--- a/main.css
+++ b/main.css
@@ -11,6 +11,10 @@ header{
     display: flex;
     justify-content: flex-end;
 }
+#form {
+  display: flex;
+  justify-content: flex-end;
+}
 .search{
     background-color: transparent;
     border-radius: 60px;
@@ -20,6 +24,7 @@ header{
     color: white;
     width: 50%;
     transition: .3s linear;
+    
 }
 .search::placeholder{
     color: rgb(51, 53, 48);
@@ -101,4 +106,47 @@ main {
   .movie:hover .overview {
     transform: translateY(0);
   }
-  
+  footer {
+    background-color: rgb(172, 148, 132);
+    display: flex;
+    justify-content: space-between;
+    font-size: 26px;
+  }
+  .age {
+    margin: 0 20px;
+    width: 30%;
+    display: flex;
+    align-items: baseline;
+  }
+  .age a {
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+  }
+  .age a:hover {
+    color: gold;
+    transition: 0.3s;
+  }
+  .text {
+    padding: 0 20px;
+  }
+  .link {
+    display: flex;
+    margin: 0 20px;
+    width: 30%;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  .rss {
+    background-image: url(assets/svg/rss.svg);
+    width: 100px;
+    height: 50px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
+  }
+  .rss:hover {
+    filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
+    contrast(87%);
+    transition: 0.3s;
+  }
