--- a/main.css
+++ b/main.css
@@ -1,158 +1,172 @@
 *{
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
+
 body{
-    background-color: rgb(158, 161, 138);
-    margin: 0;
+  background-color: rgba(158, 161, 138, 0.767);
+  margin: 0;
+  font-family: 'Ubuntu', sans-serif;
 }
+
 header{
-    background-color: rgb(172, 148, 132);
-    padding: 2%;
-    display: flex;
-    justify-content: flex-end;
+  background-color: rgb(172, 148, 132);
+  padding: 16px;
+  display: flex;
+  justify-content: flex-end;
 }
+
 #form {
   display: flex;
   justify-content: flex-end;
 }
+
 .close {
   position:absolute;
   padding:0 5px;
-  right: 3%;
-  top: 5.5%;
+  right: 25px;
+  top: 30px;
   }
+
 .search{
-    background-color: transparent;
-    border-radius: 60px;
-    border: 2px solid rgb(73, 94, 76);
-    padding: 3% 20px;
-    font-size: 20px;
-    color: white;
-    width: 50%;
-    transition: 1s linear;
-    
+  background-color: transparent;
+  border-radius: 60px;
+  border: 2px solid rgb(73, 94, 76);
+  padding: 10px 20px;
+  font-size: 20px;
+  color: white;
+  width: 50%;
+  transition: 1s linear;
 }
+
 .search::placeholder{
-    color: rgb(51, 53, 48);
-   
+  color: rgb(51, 53, 48); 
 }
+
 .search:focus{
-    background-color: rgb(158, 161, 138);
-    outline: none;
-    width: 100%;
-    
+  background-color: rgba(189, 214, 26, 0.767);
+  outline: none;
+  width: 100%; 
 }
+
 main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
   
-  .movie {
-    width: 300px;
-    margin: 1rem;
-    background-color: rgb(172, 148, 132);
-    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
-    position: relative;
-    overflow: hidden;
-    border-radius: 50px;
-  }
+.movie {
+  width: 300px;
+  margin: 1rem;
+  background-color: rgb(172, 148, 132);
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+  position: relative;
+  overflow: hidden;
+  border-radius: 50px;
+}
   
-  .image{
-    width: 100%;
-    border-radius: 50px;
-  }
+.image{
+  width: 100%;
+  border-radius: 50px;
+}
+
+.movie-info {
+  color: #eee;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1rem 1rem;
+  letter-spacing: 0.5px;
+}
   
-  .movie-info {
-    color: #eee;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.5rem 1rem 1rem;
-    letter-spacing: 0.5px;
-  }
+.movie-info h3 {
+  margin-top: 0;
+}
   
-  .movie-info h3 {
-    margin-top: 0;
-  }
+.movie-info span {
+  background-color: var(--primary-color);
+  padding: 0.25rem 0.5rem;
+  border-radius: 3px;
+  font-weight: bold;
+}
   
-  .movie-info span {
-    background-color: var(--primary-color);
-    padding: 0.25rem 0.5rem;
-    border-radius: 3px;
-    font-weight: bold;
-  }
+.green {
+  color: lightgreen;
+}
   
-  .movie-info span.green {
-    color: lightgreen;
-  }
+.orange {
+  color: orange;
+}
   
-  .movie-info span.orange {
-    color: orange;
-  }
+.red {
+  color: red;
+}
   
-  .movie-info span.red {
-    color: red;
-  }
+.overview {
+  background-color: rgba(172, 148, 132, 0.7);
+  padding: 2rem;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  max-height: 100%;
+  transform: translateX(101%);
+  border-radius: 50px;
+  overflow-y: auto;
+  transition: transform 0.5s ease-in;
+}
   
-  .overview {
-    background-color: rgba(172, 148, 132, 0.7);
-    padding: 2rem;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    max-height: 100%;
-    transform: translateX(101%);
-    border-radius: 50px;
-    overflow-y: auto;
-    transition: transform 0.5s ease-in;
-  }
+.movie:hover .overview {
+  transform: translateY(0);
+}
+
+footer {
+  background-color: rgb(172, 148, 132);
+  display: flex;
+  justify-content: space-between;
+  font-size: 26px;
+}
+
+.age {
+  margin: 0 20px;
+  width: 30%;
+  display: flex;
+  align-items: baseline;
+
+}
+.age a {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+
+.age a:hover {
+  color: gold;
+  transition: 0.3s;
+}
+
+.text {
+  padding: 0 20px;
+}
   
-  .movie:hover .overview {
-    transform: translateY(0);
-  }
-  footer {
-    background-color: rgb(172, 148, 132);
-    display: flex;
-    justify-content: space-between;
-    font-size: 26px;
-  }
-  .age {
-    margin: 0 20px;
-    width: 30%;
-    display: flex;
-    align-items: baseline;
-  }
-  .age a {
-    text-decoration: none;
-    color: black;
-    cursor: pointer;
-  }
-  .age a:hover {
-    color: gold;
-    transition: 0.3s;
-  }
-  .text {
-    padding: 0 20px;
-  }
-  .link {
-    display: flex;
-    margin: 0 20px;
-    width: 30%;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  .rss {
-    background-image: url(assets/svg/rss.svg);
-    width: 100px;
-    height: 50px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    cursor: pointer;
-  }
-  .rss:hover {
-    filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
-    contrast(87%);
-    transition: 0.3s;
-  }
+.link {
+  display: flex;
+  margin: 0 20px;
+  width: 30%;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.rss {
+  background-image: url(assets/svg/rss.svg);
+  width: 100px;
+  height: 50px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.rss:hover {
+  filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
+  contrast(87%);
+  transition: 0.3s;
+}
